src/tess/tl/test/fail/test_fail_const_value_reassign.tl
#module main

main() {
    x: Const[Int] := 5
    x = 10
    0
}
